# protocheck

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  Taskfile.yaml  cliff.toml  justfile  package.json  pnpm-lock.yaml  pre_release.sh  rustfmt.toml  svelte.config.js  vite.config.ts
cel/: Cargo.toml  build.rs
cel-derive/: Cargo.toml
cel-derive-macro/: Cargo.toml
cel-derive-macro/src/: cel_try_into.rs  lib.rs  macros.rs
cel-derive/src/: into_cel.rs  lib.rs
cel/src/: lib.rs  main.rs
core/: Cargo.toml  README.md
core/src/: field_data.rs  impls.rs  lib.rs  wrappers.rs
core/src/internals/: mod.rs  validator_template.rs
core/src/validators/: bytes.rs  cel.rs  common.rs  comparables.rs  constants.rs  containing.rs  create_violation.rs  enums.rs  floats.rs  maps.rs  mod.rs  oneofs.rs  repeated.rs  required.rs  string.rs  strings.rs  timestamps.rs  well_known_strings.rs
core/src/validators/static_data/: base_violations.rs  bytes_violations.rs  const_rules.rs  const_violations.rs  gt_rules.rs  gt_violations.rs  gte_rules.rs  gte_violations.rs  in_rules.rs  in_violations.rs  lt_rules.rs  lt_violations.rs  lte_rules.rs  lte_violations.rs  mod.rs  not_in_rules.rs  not_in_violations.rs  strings_violations.rs  well_known_strings.rs
proc_macro/: Cargo.toml  README.md
proc_macro/src/: attribute_extractors.rs  cel_rule_template.rs  cel_try_into.rs  lib.rs  macros.rs  message_validator.rs  oneof_validator.rs  pool_loader.rs  special_field_names.rs  utils.rs  validation_data.rs  validator_template.rs
proc_macro/src/attributes/: mod.rs  oneof_attrs.rs
proc_macro/src/protogen/: mod.rs
proc_macro/src/rules/: agg_results.rs  any_rules.rs  bool_rules.rs  bytes_rules.rs  cel_rules.rs  comparable_rules.rs  const_rules.rs  containing_rules.rs  core.rs  duration_rules.rs  enum_rules.rs  extract_validators.rs  field_rules.rs  length_rules.rs  list_rules.rs  map_rules.rs  mod.rs  numeric_rules.rs  repeated_rules.rs  rules_compat.rs  string_rules.rs  substring_rules.rs  timestamp_rules.rs
proto_types/: CHANGELOG.md  Cargo.toml  README.md  build.rs  cliff.toml
proto_types/src/: any.rs  any_impls.rs  buf.rs  buf.validate.rs  cel.rs  constants.rs  conversions.rs  datetime.rs  datetime_internal.rs  diesel_impls.rs  duration.rs  duration_impls.rs  empty.rs  field_mask.rs  field_type.rs  lib.rs  num_wrappers.rs  protobuf.rs  protobuf_impls.rs  timestamp.rs  timestamp_impls.rs  type_url.rs
proto_types/src/common/: cel_common_types_impls.rs  color.rs  common_serde_impls.rs  date.rs  datetime.rs  decimal.rs  fraction.rs  google.type.rs  interval.rs  latlng.rs  localized_text.rs  mod.rs  money.rs  postal_address.rs  time_of_day.rs
proto_types/src/duration/: base.rs  duration_data.rs  duration_impls.rs  duration_operations.rs  duration_units.rs  format_helpers.rs  formatting.rs  mod.rs  units.rs
proto_types/src/duration/impls/: base.rs  format_helpers.rs  mod.rs  serde.rs
proto_types/src/protovalidate/: buf.validate.rs  comparable_rules.rs  const_rules.rs  containing_rules.rs  into_comparable.rs  length_rules.rs  mod.rs  numeric_rules.rs  substring_rules.rs  violations.rs
proto_types/src/protovalidate/violations/: mod.rs  violation_impls.rs
proto_types/src/protovalidate/violations/violations_data/: any_violations.rs  base_violations.rs  bytes_violations.rs  const_violations.rs  duration_violations.rs  enum_violations.rs  field_mask_violations.rs  (+14 more)
proto_types/src/protovalidate_impls/: comparable_rules.rs  containing_rules.rs  into_comparable.rs  into_numeric.rs  mod.rs  numeric_rules.rs  rule_matching.rs  violations.rs
proto_types/src/rpc/: error_details.rs  google.rpc.rs  http.rs  mod.rs  rpc_cel_impls.rs  rpc_serde_impls.rs
proto_types/src/timestamp/: mod.rs  serde.rs  timestamp_conversions.rs  timestamp_impls.rs  timestamp_operations.rs
proto_types/src/timestamp/impls/: base.rs  conversions.rs  mod.rs  operations.rs
protocheck/: Cargo.toml  README.md  build.rs
protocheck-build/: Cargo.toml  README.md
protocheck-build/src/: lib.rs
protocheck/src/: field_data.rs  impls.rs  lib.rs
protocheck/src/internals/: validator_template.rs
protocheck/src/validators/: cel.rs  common.rs  enums.rs  maps.rs  mod.rs  oneofs.rs  repeated.rs  strings.rs
protoschema/: Cargo.toml
protoschema/protogen/: mod.rs
protoschema/src/: lib.rs
src-tauri/: .gitignore  Cargo.toml  poke-db.sqlite3
src-tauri/cel/: Cargo.toml  build.rs
src-tauri/cel/src/: main.rs
src-tauri/cel/src/rules/: any_rules.rs  bool_rules.rs  bytes_rules.rs  duration_rules.rs  enum_rules.rs  map_rules.rs  mod.rs  numeric_rules.rs  repeated_rules.rs  string_rules.rs  timestamp_rules.rs
src-tauri/data/: pokemon.json
src-tauri/db/: Cargo.toml  poke-db.sqlite3
src-tauri/db/migrations/2025-07-12-193425_init/: down.sql  up.sql
src-tauri/db/src/: lib.rs  models.rs  schema.rs
src-tauri/macro_impl/: Cargo.toml  build.rs
src-tauri/macro_impl/src/: lib.rs
src-tauri/macro_impl/src/validators/: cel.rs  enums.rs  maps.rs  mod.rs  oneofs.rs  repeated.rs  strings.rs
src-tauri/migrations/2025-07-12-193425_init/: down.sql  up.sql
src-tauri/pr_macro/: Cargo.toml  build.rs
src-tauri/pr_macro/src/: lib.rs
src-tauri/pr_macro/src/validator/: any_rules.rs  bool_rules.rs  bytes_rules.rs  cel_rules.rs  core.rs  duration_rules.rs  enum_rules.rs  extract_validators.rs  map_rules.rs  mod.rs  numeric_rules.rs  pool_loader.rs  repeated_rules.rs  string_rules.rs  timestamp_rules.rs
src-tauri/proto_types/: Cargo.toml
src-tauri/proto_types/src/: impls.rs  lib.rs  macros.rs
src-tauri/src/: lib.rs  models.rs  schema.rs
src-tauri/tauri_main/: Cargo.toml
tests/: Cargo.toml  build.rs
tests/proto/myapp/v1/: common_types_tests.proto  tests.proto  tests2.proto
tests/src/: main.rs
tests/src/tests/: bytes_tests.rs  common_types_tests.rs  comparables_tests.rs  containing_tests.rs  docs_example.rs  finite_floats_tests.rs  ignores_tests.rs  maps_tests.rs  mod.rs  optional_tests.rs  recursion_tests.rs  repeated_tests.rs  strings_tests.rs  timestamps_tests.rs  well_known_strings_tests.rs
(+28 files in other folders)
