[workspace]
members = [
  "proc_macro",
  "protoschema",
  "tests",
  "proto_types",
  "core",
  "protocheck",
  "protocheck-build",
  "builder",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "Apache-2.0"
authors = ["Rick-Phoenix <https://github.com/Rick-Phoenix>"]
description = "Core logic and validators for protocheck."
keywords = ["validation", "protobuf", "cel", "validator", "proto"]
repository = "https://github.com/Rick-Phoenix/protocheck"
edition = "2024"

[workspace.dependencies]
proto-types = "0.1.0"

cel = { version = "=0.11.0", features = ["chrono"] }
prost = "0.14.1"
serde = { version = "1", features = ["derive"] }
prost-reflect = { version = "0.16.1" }
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
bytes = { version = "1", features = ["serde"] }
regex = "1"
prost-build = "0.14.1"
chrono = { version = "0.4.41", features = ["serde"] }
base64 = "0.22.1"
thiserror = "2.0.12"
ipnetwork = "*"
maplit = "1"
paste = "1"
iri-string = "0.7"
convert_case = "0.8.0"
document-features = "0.2.11"
