[workspace]
members = [
  "proc_macro",
  "tests",
  "proto_types",
  "core",
  "protocheck",
  "protocheck-build",
  "builder",
  "cel-derive",
]
resolver = "3"

[workspace.metadata.release]
tag = false
allow-branch = ["main"]
enable-all-features = true
shared-version = true

[workspace.package]
version = "0.1.11"
license = "Apache-2.0"
authors = ["Rick-Phoenix <https://github.com/Rick-Phoenix>"]
description = "Core logic and validators for protocheck."
keywords = ["validation", "protobuf", "cel", "validator", "proto"]
repository = "https://github.com/Rick-Phoenix/protocheck"
edition = "2024"

[workspace.dependencies]
cel = { version = "0.11.4", features = ["chrono"] }
prost = "0.14.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost-reflect = { version = "0.16.2" }
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
bytes = { version = "1", features = ["serde"] }
regex = "1"
prost-build = "0.14.1"
chrono = { version = "0.4.42", features = ["serde"] }
base64 = "0.22.1"
thiserror = "2"
ipnetwork = "0.21.1"
maplit = "1"
paste = "1"
iri-string = "0.7"
convert_case = "0.8"
document-features = "0.2"
rust_decimal = "1.37"
