[package]
name = "cel-derive"
version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
cel-derive-macro = { path = "../cel-derive-macro/" }
proto-types = { path = "../proto_types/", default-features = false, features = [
  "cel",
] }
cel = { workspace = true }
