[package]
name = "cel-test"
version = "0.1.0"
edition = "2024"


[dependencies]
prost = { workspace = true }
serde = { workspace = true }
cel-interpreter = { workspace = true }
bytes = { workspace = true }
regex = { workspace = true }
protocheck = { path = "../pub/" }
# proto_types = { path = "../proto_types/" }

[build-dependencies]
prost-build = { workspace = true }
