[package]
name = "protocheck-core"
version = "0.1.0"
edition = "2024"

[dependencies]
proto-types = { path = "../proto_types/" }

quote = { workspace = true, optional = true }
proc-macro2 = { workspace = true, optional = true }

cel = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }

ipnetwork = { workspace = true, optional = true }
iri-string = { workspace = true, optional = true }

paste = { workspace = true }

[features]
cel = ["proto-types/cel", "dep:cel", "dep:chrono"]
totokens = ["dep:proc-macro2", "dep:quote"]
ip = ["dep:ipnetwork"]
uri = ["dep:iri-string"]
bytes = ["dep:bytes"]
regex = ["dep:regex"]

default = ["ip", "uri", "bytes", "regex", "cel", "totokens"]
