[package]
name = "protocheck-core"
version = { workspace = true }

readme = true

description = "⚙️ Core logic and validators for protocheck."

keywords = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
proto-types = { path = "../proto_types/", version = "0.1.10", features = [
  "protovalidate",
] }

quote = { workspace = true, optional = true }
proc-macro2 = { workspace = true, optional = true }

cel = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }

ipnetwork = { workspace = true, optional = true }
iri-string = { workspace = true, optional = true }

paste = { workspace = true }

[features]
cel = ["proto-types/cel", "dep:cel", "dep:chrono"]
totokens = ["dep:proc-macro2", "dep:quote", "proto-types/totokens"]
ip = ["dep:ipnetwork"]
uri = ["dep:iri-string"]
bytes = ["dep:bytes"]
regex = ["dep:regex"]

default = ["ip", "uri", "bytes", "regex", "cel", "totokens"]
