[package]
name = "protocheck-core"
version = { workspace = true }

readme = true

description = "⚙️ Core logic and validators for protocheck."

keywords = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
proto-types = { path = "../proto_types/", version = "0.1.11", features = [
  "protovalidate",
] }

quote = { workspace = true, optional = true }
proc-macro2 = { workspace = true, optional = true }

cel = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
ordered-float = { workspace = true, optional = true }

ipnetwork = { workspace = true }
bytes = { workspace = true }
fluent-uri = "0.4"
paste = { workspace = true }

[features]
default = ["regex", "validators"]

## Enables the validators, which are used by the protocheck-proc-macro crate
validators = []
cel = ["proto-types/cel", "dep:cel", "dep:chrono"]
totokens = ["dep:proc-macro2", "dep:quote", "proto-types/totokens"]
regex = ["dep:regex"]
ordered-float = ["dep:ordered-float"]
