[package]
name = "protocheck-proc-macro"
version = { workspace = true }

readme = true

description = "⚙️ Procedural macro implementations for protocheck."

keywords = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
proc-macro = true

[dependencies]
proto-types = { version = "0.1.11", path = "../proto_types/", features = [
  "protocheck",
  "totokens",
] }
protocheck-core = { version = "0.1.11", path = "../core/", features = [
  "totokens",
] }

prost-reflect = { workspace = true }
cel = { workspace = true, optional = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
regex = { workspace = true }
convert_case = { workspace = true }
paste = "1"
ordered-float = "5.1"
itertools = "0.14"
bytes = "1"

[features]
cel = ["protocheck-core/cel", "proto-types/cel", "dep:cel"]

default = ["cel"]
