[package]
name = "proto_types"
version = "0.1.0"
edition = "2024"

[dependencies]
quote = { workspace = true, optional = true }
proc-macro2 = { workspace = true, optional = true }
syn = { workspace = true, optional = true }
paste = { workspace = true, optional = true }

prost = { workspace = true }
chrono = { workspace = true, optional = true }

serde = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

cel = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

[features]
cel = ["dep:cel", "dep:thiserror"]
serde = ["dep:serde", "dep:base64", "chrono?/serde"]
protocheck = ["dep:quote", "dep:proc-macro2", "dep:syn", "dep:paste"]
totokens = ["dep:quote", "dep:proc-macro2"]
chrono = ["dep:chrono", "cel?/chrono"]

default = ["chrono"]

[build-dependencies]
prost-build = { workspace = true }
