[package]
name = "proto-types"
version = "0.1.11"

readme = true

description = "⚙️ Implementations for various common protobuf types."

keywords = ["protobuf", "types", "common", "wkt"]
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[package.metadata.release]
tag = true
shared-version = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
num-traits = { workspace = true }
bytes = { version = "1" }

paste = { workspace = true }

document-features = { workspace = true }

prost = { workspace = true }
chrono = { version = "0.4", optional = true, default-features = false, features = [
  "alloc",
] }

serde = { version = "1", optional = true, default-features = false }
serde_json = { version = "1", optional = true, default-features = false }
base64 = { workspace = true, optional = true }

cel = { workspace = true, optional = true }
thiserror = { workspace = true }

rust_decimal = { workspace = true, optional = true }
chrono-tz = { version = "0.10.4", optional = true }

palette = { version = "0.7.6", optional = true }

diesel = { version = "2", optional = true }

[features]
default = ["std", "chrono"]

std = ["serde?/std", "serde_json?/std", "chrono?/std"]

diesel-mysql = [
  "std",
  "chrono",
  "dep:diesel",
  "diesel/chrono",
  "diesel/mysql_backend",
]
diesel-postgres = [
  "std",
  "chrono",
  "dep:diesel",
  "diesel/chrono",
  "diesel/postgres_backend",
]
diesel-sqlite = [
  "std",
  "chrono",
  "dep:diesel",
  "diesel/chrono",
  "diesel/sqlite",
]

## Enables conversions into cel::Value.
cel = ["std", "dep:cel"]
## Enables serde implementations.
serde = [
  "dep:serde",
  "dep:serde_json",
  "dep:base64",
  "chrono?/serde",
  "bytes/serde",
]
## Enables implementations for the buf.validate messages and enums.
protovalidate = []
## Enables conversion to and from chrono types for the time-related structs.
chrono = ["dep:chrono", "cel?/chrono"]
## Enables timezone support for DateTime.
chrono-tz = ["dep:chrono-tz"]

## Enables all message types from the google.type package.
all_common = [
  "decimal",
  "color",
  "date",
  "datetime",
  "timeofday",
  "fraction",
  "money",
  "interval",
  "localized_text",
  "postal_address",
  "quaternion",
  "latlng",
  "expr",
  "phone_number",
]

## Enables all message types from the google.rpc package.
rpc = []
## Enables support for the google.type.Decimal, with conversions to/from rust_decimal::Decimal.
decimal = ["dep:rust_decimal"]
## Enables google.type.Color.
color = []
## Enables conversions to and from types from the `palette` crate for Color.
palette = ["dep:palette"]
## Enables google.type.Date.
date = []
## Enables google.type.DateTime.
datetime = []
## Enables google.type.TimeOfDay.
timeofday = []
## Enables google.type.Fraction.
fraction = []
## Enables google.type.Money.
money = []
## Enables google.type.Interval.
interval = []
## Enables google.type.LocalizedText.
localized_text = []
## Enables google.type.PostalAddress.
postal_address = []
## Enables google.type.Quaternion.
quaternion = []
## Enables google.type.LatLng.
latlng = []
## Enables google.type.Expr.
expr = []
## Enables google.type.PhoneNumber.
phone_number = []
