[package]
name = "protocheck-build"
version = "0.1.0"
description = "Build-time entrypoint for protocheck."

keywords = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
prost-build = { workspace = true }
prost-reflect = { workspace = true }

[features]
cel = []

default = ["cel"]
