[package]
name = "protocheck-build"
version = { workspace = true }

readme = "README.md"

description = "⚙️ Build-time entrypoint for protocheck"

keywords = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
tonic-prost-build = "0.14.2"

[dependencies]
prost-build = { workspace = true }
prost-reflect = { workspace = true }

[features]
cel = []

default = ["cel"]
