[package]
name = "protocheck"
version = "0.1.0"
description = "A library that generates rust validation logic from schemas defined in protobuf options."

keywords = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[dependencies]
protocheck-proc-macro = { path = "../proc_macro/", default-features = false }
protocheck-core = { path = "../core/", default-features = false }
proto-types = { path = "../proto_types/", default-features = false }
document-features = { workspace = true }

[dev-dependencies]
prost-build = { workspace = true }
protocheck-build = { path = "../protocheck-build/" }

[features]
## Enables serde support for protobuf well known types.
serde = ["proto-types/serde"]
chrono = ["proto-types/chrono"]
## Enables validation with custom Cel expressions.
cel = ["proto-types/cel", "protocheck-core/cel", "protocheck-proc-macro/cel"]
## Enables the ToTokens trait for some enums and structs.
totokens = ["proto-types/totokens", "protocheck-core/totokens"]
## Enables complex validation for bytes or string fields, such as checking if an ip is a network address or not. Not necessary for simpler checks like checking if a field is a valid ip.
ip = ["protocheck-core/ip"]
## Enables validation for URIs.
uri = ["protocheck-core/uri"]
## Enables validation for bytes fields.
bytes = ["protocheck-core/bytes"]
## Enables the validators that use the Regex crate, such as 'pattern', or the well known strings such as 'header_name', 'email' and so on.
regex = ["protocheck-core/regex"]

default = ["ip", "uri", "bytes", "regex", "cel", "serde", "totokens", "chrono"]
