[package]
name = "protocheck"
version = { workspace = true }
description = "✅ Validate protobuf messages using protobuf annotations"

readme = "README.md"

keywords = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[package.metadata.release]
tag = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
protocheck-proc-macro = { version = "0.1.11", path = "../proc_macro/", default-features = false }
protocheck-core = { version = "0.1.11", path = "../core/", default-features = false }
proto-types = { version = "0.1.11", path = "../proto_types/", default-features = false, features = [
  "protovalidate",
] }
document-features = { workspace = true }

[features]
default = ["regex", "cel", "chrono"]

## Enables support for set lookups in validators involving floating point numbers
ordered-float = [
  "protocheck-core/ordered-float",
  "protocheck-proc-macro/ordered-float",
]
chrono = ["proto-types/chrono"]
## Enables validation with custom Cel expressions.
cel = ["proto-types/cel", "protocheck-core/cel", "protocheck-proc-macro/cel"]
## Enables the validators that use the Regex crate, such as 'pattern', or the well known strings such as 'header_name', 'email' and so on.
regex = ["protocheck-core/regex"]
