[package]
name = "protoschema"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
protocheck_proc_macros = { path = "../proc_macro/" }
proto_types = { path = "../proto_types/" }
prost = { workspace = true }
serde = { workspace = true }
cel = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
