[package]
name = "protoschema"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[lib]

[dependencies]
protocheck-proc-macro = { path = "../proc_macro/" }
proto-types = { path = "../proto_types/" }
prost = { workspace = true }
serde = { workspace = true }
cel = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
