

[workspace]
members = ["tauri_main", "db", "pr_macro", "macro_impl", "cel", "proto_types"]
resolver = "2"

[workspace.dependencies]
prost = "0.14.1"
serde = { version = "1", features = ["derive"] }
prost-reflect = { version = "0.16.0", features = ["serde"] }
cel-interpreter = "0.9.1"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
bytes = "1"
regex = "1"
prost-build = "0.14.1"
dotenvy = "0.15.7"
serde_json = "1"


[profile.dev]
opt-level = 0
debug = 0
