[package]
name = "tests"
publish = false
edition = { workspace = true }

[dependencies]
prost = { workspace = true, features = ["derive", "std"] }
serde = { workspace = true }
bytes = { workspace = true }
regex = { workspace = true }
protocheck = { version = "0.1.11" }
proto-types = { workspace = true, features = [
  "default",
  "serde",
  "cel",
  "all_common",
  "rpc",
] }
chrono = { workspace = true }
maplit = { workspace = true }
ordered-float = { workspace = true }

[build-dependencies]
protocheck-build = { version = "0.1.11", features = ["cel"] }
prost-build = { workspace = true }
prost-reflect = { workspace = true }
