[package]
name = "cel-test"
version = "0.1.0"
edition = "2024"


[dependencies]
prost = "0.14.1"
serde = { version = "1", features = ["derive"] }
cel-interpreter = "0.9.1"
bytes = "1"
regex = "1.x"
macro_impl = { path = "../macro_impl/" }
proto_types = { path = "../proto_types/" }

[build-dependencies]
prost-build = "0.14.1"
