[package]
name = "db"
version = "0.1.0"
description = "Core database logic and models for the Tauri app"
authors = ["you"]
edition = "2021"

[lib]
name = "db"
create-type = ["rlib"]

[dependencies]
dotenvy = { workspace = true }
diesel = { version = "2.2.12", features = [
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
] }
serde = { workspace = true }
serde_json = { workspace = true }
macro_impl = { path = "../macro_impl/" }

[[bin]]
name = "show_pokemons"
path = "src/bin/show_pokemons.rs"
