[package]
name = "pr_macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
prost = "0.14.1"
prost-reflect = { version = "0.16.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
cel-interpreter = "0.9.1"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
bytes = "1"
lazy_static = "1.4"
regex = "1"

[build-dependencies]
prost-build = "0.14.1"
